@@ -20,6 +20,7 @@
     fix make fail gtk2.18 replace gtk_dialog_get_widget_for_response
     dialog allow arbitrary text in progress bar
     dialog %(command) accepts bash command line
+    document Unmount On Exit ignored on X logout kill #204
 0.8.2   2012-10-25:
     fix --enable-hal build issues (affected 0.7.6 thru 0.8.1)
     overwrite dialog replace text view with labels
